fixed scrollbar

--- a/css/page.css
+++ b/css/page.css
@@ -210,7 +210,7 @@ body {
 
 .getintouch {
 	width: 10%;
-	z-index: 2;
+	z-index: 0;
 }
 
 .getintouch-heading {
